# hola

./: 404.html  CONTENIDO.txt  ENTREGA.md  INSTRUCCIONES_PUBLICACION.md  README.md
assets/: index-BTXHpGTF.js  index-DcXdF_Vq.css  index-DwWKCq68.js
codigo-fuente-completo/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
codigo-fuente-completo/public/: manifest.webmanifest
codigo-fuente-completo/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx  types.ts
codigo-fuente-completo/src-tauri/: Cargo.toml  tauri.conf.json
codigo-fuente-completo/src-tauri/capabilities/: default.json
codigo-fuente-completo/src-tauri/icons/: README.txt
codigo-fuente-completo/src/design-system/components/: Badge.tsx  Button.tsx  Card.tsx  DataTable.tsx  Input.tsx  Modal.tsx  index.ts
codigo-fuente-completo/src/lib/: audit.ts  permissions.ts  supabase.ts  utils.ts
codigo-fuente-completo/src/modules/: moduleRegistry.tsx
codigo-fuente-completo/src/modules/dashboard/: Dashboard.tsx
codigo-fuente-completo/src/modules/pos/: POS.tsx
codigo-fuente-completo/src/modules/settings/: Settings.tsx
codigo-fuente-completo/src/offline/: indexedDb.ts  offlineQueue.ts  syncEngine.ts
codigo-fuente-completo/src/stores/: sessionStore.ts  settingsStore.ts
codigo-fuente-completo/supabase/: config.toml  seed.sql
codigo-fuente-completo/supabase/migrations/: 001_initial_erp_schema.sql  002_rls_policies.sql  003_rpc_authorizations_and_audit.sql
docs/: ARQUITECTURA.md  MODULOS.md  PROMPT_MAESTRO.txt  ROADMAP.md
(+3 files in other folders)
